# NDT_Lab

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/source/: appWindows.cpp  appWindows.hpp  applicationData.cpp  applicationData.hpp  core.cpp  core.hpp  embeddedFonts.cpp  embeddedFonts.hpp  gui.cpp  gui.hpp  main.cpp  nomogram.cpp  protocol.hpp  protocolVMC.cpp  protocolVMC.hpp  resourceManager.cpp  resourceManager.hpp  xrayBase.cpp  xrayDevice.hpp
resources/: CMakeLists.txt  DATA.db3  settings.toml  xray_devices.toml
resources/fonts/: ShareTechMonoRegular.cpp
resources/normative/: ГОСТ 7512-82.doc
